[gd_scene load_steps=4 format=3 uid="uid://b53ag461e0lg8"]

[ext_resource type="Script" path="res://scripts/death_area.gd" id="1_kascj"]
[ext_resource type="AudioStream" uid="uid://t315y5d632gv" path="res://assets/world/hazards/dodge.wav" id="2_ya6s6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fex1i"]

[node name="DeathArea" type="Area2D"]
script = ExtResource("1_kascj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fex1i")

[node name="DodgeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ya6s6")
volume_db = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
